--- a/docs/pages/database-access/guides/mysql-self-hosted.mdx
+++ b/docs/pages/database-access/guides/mysql-self-hosted.mdx
@@ -1,6 +1,6 @@
 ---
 title: Database Access with Self-Hosted MySQL/MariaDB
-description: How to configure Teleport Database Access with self-hosted MySQL/MariaDB.
+description: How to configure Teleport database access with self-hosted MySQL/MariaDB.
 ---
 
 This guide will help you to:
@@ -223,7 +223,7 @@ $ teleport db configure create \
   title="Tip"
 >
   A single Teleport process can run multiple services, for example
-  multiple Database Access instances as well as other services such the
+  multiple Database Service instances as well as other services such the
   SSH Service or Application Service.
 </Admonition>
 
