--- a/docs/pages/desktop-access/getting-started.mdx
+++ b/docs/pages/desktop-access/getting-started.mdx
@@ -1,6 +1,6 @@
 ---
 title: Getting Started with Desktop Access
-description: Automatically add Teleport Desktop Access to your infrastructure
+description: Automatically add Teleport desktop access to your infrastructure
 videoBanner: v36tlB8D5kk
 ---
 
@@ -21,12 +21,12 @@ provide secure, passwordless access to Windows desktops.
 
 <Details title="Compare Desktop Access to other RDP clients">
 
-Teleport Desktop Access is designed to be a secure access solution for Windows
-environments. Teleport implements a minimal feature set of the RDP protocol with
-security as a priority, and may not be as performant as standard RDP clients.
-Consider Desktop Access to manage access to your most sensitive Windows
-environments, not as a drop-in replacement for other tools to provide general
-access to Windows desktops.
+The Teleport Desktop Service is designed to be a secure access solution for
+Windows environments. Teleport implements a minimal feature set of the RDP
+protocol with security as a priority, and may not be as performant as standard
+RDP clients. Consider the Desktop Service to manage access to your most sensitive
+Windows environments, not as a drop-in replacement for other tools to provide
+general access to Windows desktops.
 
 </Details>
 
@@ -74,9 +74,9 @@ Click **NEXT**.
 The PowerShell script will output a Teleport configuration block. Copy this
 block to a temporary location. Click **Next**.
 
-On the Linux host you installed Teleport to run as the Desktop Access connector,
-edit `/etc/teleport.yaml` and paste the configuration provided by the output of
-the previous step. Review and edit the addition as necessarily for your environment:
+On the Linux host where you installed Teleport to run the Desktop Service, edit
+`/etc/teleport.yaml` and paste the configuration provided by the output of the
+previous step. Review and edit the addition as necessarily for your environment:
 
 ```yaml
 version: v3
@@ -205,3 +205,4 @@ under **Desktops**. Click **Finish** then **BROWSE EXISTING RESOURCES** to see t
 If you hit any issues, check out the
 [Troubleshooting documentation](./troubleshooting.mdx) for common problems and
 solutions.
+
